<resources>
    <string name="app_name">Shopping Notes</string>

    <string name="welcome_to">Welcome to</string>
    <string name="shopping_notes">Shopping Notes</string>
    <string name="created_by">Created by Guillaume Blanc de Lanaute</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_member">Not yet a member?</string>
    <string name="register_to">Register to</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="profil_picture">Profil picture</string>
    <string name="my_lists">My lists</string>
    <string name="my_history">My history</string>
    <string name="create_a_group">Create a group</string>
    <string name="my_groups">My groups</string>
    <string name="my_account">My account</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_of_the_list">Name of the list</string>
    <string name="create">Create</string>
    <string name="item_picture">Item picture</string>
    <string name="add_items">Add items</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="add_to_my_history">Add to my history</string>
    <string name="new_list">New list</string>
    <string name="see_my_list">See my list</string>
    <string name="add_to_my_lists">Add to my lists</string>
    <string name="my_list">My list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_checked">Item checked</string>
    <string name="purchased_item">Purchased item</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="reset_my_password_email">Reset my password (Email)</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="see_my_group">See my group</string>
    <string name="see_members">See members</string>
    <string name="leave_the_group">Leave the group</string>
    <string name="add_member">Add member</string>
</resources>
